{
    "name": "CreateCurveInputAction",
    "maps": [
        {
            "name": "CreateCurve",
            "id": "0ec2b084-34af-4f03-8fe9-9324c66bb765",
            "actions": [
                {
                    "name": "CreateCurve",
                    "type": "Button",
                    "id": "1c8b1ee7-65a3-4fa2-afc7-0caa4c185519",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "369414c9-15f1-4c77-83eb-23bfe42014ee",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CreateCurve",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CreateLine",
            "id": "75e82840-bb78-4ebc-a48f-d78628d2ce16",
            "actions": [
                {
                    "name": "CreateLine",
                    "type": "Button",
                    "id": "3069997f-0a8e-4615-9c75-6e1157684a77",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40640dbe-ec94-4c33-9171-b1f221b49805",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CreateLine",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "EraseSegment",
            "id": "64998524-3e01-40d5-81fc-fcd6109b2747",
            "actions": [
                {
                    "name": "EraseSegment",
                    "type": "Button",
                    "id": "e249186c-7d01-4178-aa60-2cef59a2c039",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8f4d4b27-b49f-413b-ac56-16d13055e16e",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EraseSegment",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RotateClockwise",
            "id": "5537c6a9-6210-4798-a357-361324c4c758",
            "actions": [
                {
                    "name": "Rotate Clockwise",
                    "type": "Button",
                    "id": "6d10669e-be56-4ad0-b978-addba8eb52fa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0ff10bb8-a7e2-4396-9e97-f838cd79fee4",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate Clockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RotateCounterClockwise",
            "id": "4f7f3469-c41d-4752-880b-e936e90f7b9d",
            "actions": [
                {
                    "name": "Rotate CounterClockwise",
                    "type": "Button",
                    "id": "776b96e4-3c08-416d-9a95-b62df6497581",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "92ccc830-6dda-4a3d-affe-eee230b2b4ab",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate CounterClockwise",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ExtendCurvature",
            "id": "0e45be9a-47c7-4b1a-b6b3-2f7fd028a80b",
            "actions": [
                {
                    "name": "Extend Curvature",
                    "type": "Button",
                    "id": "d7ede0f4-f66a-4270-a790-7ad77b190538",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "07d61765-33b4-421f-9508-6f8c35b787fd",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Extend Curvature",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}